--- a/Css/main.css
+++ b/Css/main.css
@@ -1972,7 +1972,8 @@ div.cr.loader.circular.pink {
 div.cr.loader.screen.circular {
   position: fixed;
   top: 40%;
-  left: 47%;
+  left: 50%;
+  transform: translateX(-50%);
   border: 5px solid rgba(158, 158, 158, 0.1);
   z-index: 201;
   width: 50px;
@@ -1980,9 +1981,6 @@ div.cr.loader.screen.circular {
   border-radius: 50%;
   margin: 0 auto;
   background: none;
-  -webkit-transition: transform 0.3s ease-out;
-  -ms-transition: transform 0.3s ease-out;
-  transition: transform 0.3s ease-out;
   -webkit-animation: transform 0.3s ease-out;
   -ms-transition: transform 0.3s ease-out;
   animation: spin 2s linear infinite; }
@@ -2030,7 +2028,7 @@ div.cr.loader.circular.colored {
 
 div.cr.loader.screen.pulse {
   position: fixed;
-  left: 47%;
+  left: 50%;
   top: 40%;
   z-index: 201;
   margin: 0 auto;
@@ -2096,8 +2094,9 @@ div.cr.loader.screen.dots {
   -ms-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
   z-index: 201;
-  left: 46%;
-  top: 40%;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 45%;
   -webkit-animation: fadeIn 0.3s ease-out;
   -moz-animation: fadeIn 0.3s ease-out;
   -o-animation: fadeIn 0.3s ease-out;
@@ -2139,15 +2138,16 @@ span.load-overlay.hide {
 
 div.cr.loader.screen.balls {
   position: fixed;
+  width: 50px;
+  margin: 0 auto;
   z-index: 201;
-  left: 47%;
+  text-align: center;
   -webkit-transition: opacity 0.3s ease-out;
   -ms-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
   top: 40%;
+  left: 50%;
   height: 50px;
-  width: 50px;
-  margin: 0 auto;
   -webkit-animation: spinRotate 1s infinite;
   -moz-animation: spinRotate 1s infinite;
   -ms-animation: spinRotate 1s infinite;
@@ -2170,10 +2170,6 @@ div.cr.loader.screen.balls {
     animation: ball2 1s infinite;
     background: #2196F3;
     box-shadow: 30px 0 0 #4CAF50; }
-
-@media screen and (max-width: 471px) {
-  div.cr.loader.screen {
-    margin-left: -20px !important; } }
 
 div.cr.linear.loader {
   width: 280px;
